name:                hsbitflyer
version:             0.1.0.0
synopsis:            Haskell wrapper for bitFlyer's REST API.
description:         Please see README.md
homepage:            https://github.com/MasWag/hsbitflyer
license:             MIT
license-file:        LICENSE
author:              Masaki Waga
maintainer:          masakiwaga@gmail.com
copyright:           2016 Masaki Waga
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bitflyer
  build-depends:       base >= 4.7 && < 5
                       , aeson
  default-language:    Haskell2010

test-suite hsbitflyer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hsbitflyer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MasWag/hsbitflyer
